Page MenuHome GnuPG

make check 14 0f 35 tests failed
Closed, ResolvedPublic

Description

debian stretch amd64

./configure --build=x86_64-pc-linux-gnu --prefix=/builds/gpg21x
--enable-large-secmem --with-pinentry-pgm=/usr/bin/pinentry
--with-libgcrypt-prefix=/builds/libgcrypt

checking for gpg-error-config... /usr/bin/gpg-error-config
checking for GPG Error - version >= 1.21... yes (1.21)
checking for libgcrypt-config... /builds/libgcrypt/bin/libgcrypt-config
checking for LIBGCRYPT - version >= 1.6.0... yes (1.7.0-beta300)
checking LIBGCRYPT API version... okay
checking for libassuan-config... /usr/bin/libassuan-config
checking for LIBASSUAN - version >= 2.4.1... yes (2.4.2-unknown)
checking LIBASSUAN API version... okay
checking for ksba-config... /usr/bin/ksba-config
checking for KSBA - version >= 1.2.0... yes (1.3.3-unknown)
checking KSBA API version... okay
checking for usb_bulk_write in -lusb... no
checking for usb_create_match... no
checking for library containing dlopen... -ldl
checking for SQLITE3... yes
checking for encfs... /usr/bin/encfs
checking for fusermount... /bin/fusermount
checking for openpty in -lutil... yes
checking for shred... /usr/bin/shred
checking for npth-config... /usr/bin/npth-config
checking for NPTH - version >= 0.91... yes (1.2)

GnuPG v2.1.11 has been configured as follows:

        Revision:  e9e5e83  (59877)
        Platform:  GNU/Linux (x86_64-pc-linux-gnu)

        OpenPGP:   yes
        S/MIME:    yes
        Agent:     yes
        Smartcard: yes (without internal CCID driver)
        G13:       no
        Dirmngr:   yes
        Gpgtar:    yes

        Protect tool:      (default)
        LDAP wrapper:      (default)
        Default agent:     (default)
        Default pinentry:  /usr/bin/pinentry
        Default scdaemon:  (default)
        Default dirmngr:   (default)

        Dirmngr auto start:  yes
        Readline support:    no
        LDAP support:        yes
        DNS SRV support:     yes
        TLS support:         gnutls
        TOFU support:        yes
        Tor support:         only .onion

FAIL: version.test
Hash algorithm MD5 is not installed (not an error)
PASS: mds.test
FAIL: decrypt.test
PASS: decrypt-dsa.test
FAIL: sigs.test
PASS: sigs-dsa.test

> IDEA 3DES CAST5 BLOWFISH AES AES192 AES256 TWOFISH CAMELLIA128 CAMELLIA192

CAMELLIA256 <
PASS: encrypt.test

> IDEA 3DES CAST5 BLOWFISH AES AES192 AES256 TWOFISH CAMELLIA128 CAMELLIA192

CAMELLIA256 <
PASS: encrypt-dsa.test
FAIL: seat.test
FAIL: clearsig.test
PASS: encryptp.test
FAIL: detach.test
FAIL: armsigs.test
PASS: armencrypt.test
PASS: armencryptp.test
FAIL: signencrypt.test
PASS: signencrypt-dsa.test
FAIL: armsignencrypt.test
FAIL: armdetach.test
FAIL: armdetachm.test
FAIL: detachm.test
PASS: genkey1024.test

> IDEA 3DES CAST5 BLOWFISH AES AES192 AES256 TWOFISH CAMELLIA128 CAMELLIA192

CAMELLIA256 <
PASS: conventional.test

> IDEA 3DES CAST5 BLOWFISH AES AES192 AES256 TWOFISH CAMELLIA128 CAMELLIA192

CAMELLIA256 <
FAIL: conventional-mdc.test
PASS: multisig.test
PASS: verify.test
armor.test: bug#1179 is back in town
FAIL: armor.test
PASS: import.test
PASS: ecc.test
PASS: 4gb-packet.test
PASS: tofu.test
plain-1
plain-2
plain-3
data-500
data-9000
data-32000
data-80000
plain-1
plain-2
plain-3
data-500
data-9000
data-32000
data-80000
plain-1
plain-2
plain-3
data-500
data-9000
data-32000
data-80000
plain-1
plain-2
plain-3
data-500
data-9000
data-32000
data-80000
plain-1
plain-2
plain-3
data-500
data-9000
data-32000
data-80000
plain-1
plain-2
plain-3
data-500
data-9000
data-32000
data-80000
PASS: gpgtar.test
PASS: use-exact-key.test
PASS: default-key.test

PASS: finish.test

14 of 35 tests failed

Please report to http://bugs.gnupg.org

Details

Version
2.1.11

Event Timeline

check out tests/openpgp/version.test.log or the oter *test.log files.

all concatenated tests 2.1.10 by contrast
hope it helps

Sorry, the logs do not help very much. There is a problem with the pjnentry
which for the tests is a simple script and not the configured one. We need to
replicate the failure to debug it.

Werner Koch via BTS:

Werner Koch <wk@gnupg.org> added the comment:

Sorry, the logs do not help very much. There is a problem with the pjnentry
which for the tests is a simple script and not the configured one. We need to
replicate the failure to debug it.

if i can provide something else please suggest.

I have the same problem when building gnupg2 on Fedora 23. Let me know if I can
help with debugging it.

This is what I see in strace log from the gpg-agent during the test - so it is
related to addition of the progress messages.

26074 read(4, "PRESET_PASSPHRASE 50B2D4FA4122C2"..., 1002) = 69
26074 getrusage(RUSAGE_SELF, {ru_utime={0, 0}, ru_stime={0, 2622}, ...}) = 0
26074 clock_gettime(CLOCK_PROCESS_CPUTIME_ID, {0, 2652041}) = 0
26074 write(4, "S PROGRESS open_dev_random X 1 0", 32) = 32
26074 write(4, "\n", 1) = 1
26074 open("/dev/urandom", O_RDONLY) = 5
26074 fcntl(5, F_GETFD) = 0
26074 fcntl(5, F_SETFD, FD_CLOEXEC) = 0
26074 write(4, "S PROGRESS need_entropy X 60 120", 32) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 poll([{fd=5, events=POLLIN}], 1, 0) = 1 ([{fd=5, revents=POLLIN}])
26074 read(5,
"\224l\240\r\205PGH:;\227\370pv\355\202df\24\201\250\272p\257\334\2\304Z\177W\244Q"...,

  1. = 60

26074 write(4, "S PROGRESS need_entropy X 120 12"..., 33) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 write(4, "S PROGRESS need_entropy X 60 120", 32) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 poll([{fd=5, events=POLLIN}], 1, 0) = 1 ([{fd=5, revents=POLLIN}])
26074 read(5,
"\222\251\303;\247\377\302Z\t[\10\354\217\236\357?\323\246\210]+\330\341\335*7\315\17\230\3141\211"...,

  1. = 60

26074 write(4, "S PROGRESS need_entropy X 120 12"..., 33) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 write(4, "S PROGRESS need_entropy X 60 120", 32) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 poll([{fd=5, events=POLLIN}], 1, 0) = 1 ([{fd=5, revents=POLLIN}])
26074 read(5,
"}\37\0267k\343DGi\372\r&\3El\305\223\312|\307\200U6\24RI\6\214\4H\273\377"...,

  1. = 60

26074 write(4, "S PROGRESS need_entropy X 120 12"..., 33) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 write(4, "S PROGRESS need_entropy X 60 120", 32) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 poll([{fd=5, events=POLLIN}], 1, 0) = 1 ([{fd=5, revents=POLLIN}])
26074 read(5,
"\21%\26k\326\1\232\204K\r\33\216\211\1\253;\324\346\362\203?g\22\315\205\203G\344AZ\272\270"...,

  1. = 60

26074 write(4, "S PROGRESS need_entropy X 120 12"..., 33) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 getrusage(RUSAGE_SELF, {ru_utime={0, 0}, ru_stime={0, 2971}, ...}) = 0
26074 clock_gettime(CLOCK_PROCESS_CPUTIME_ID, {0, 2978843}) = 0
26074 write(4, "OK", 2) = -1 EPIPE (Broken pipe)
26074 --- SIGPIPE {si_signo=SIGPIPE, si_code=SI_USER, si_pid=26040, si_uid=1000} ---
26074 write(2, "gpg-agent[26040]: Assuan process"..., 55) = 55
26074 write(2, "\n", 1) = 1
26074 close(4) = 0

Also the pinentry.sh script does not look like being called during the opengpg
tests at all because I've added 'exit 1' directly to the beginning of it and
nothing changed even with the gnupg-2.1.10 make check which passed.

From looking at the strace in T2229 (t8m on Feb 02 2016, 10:32 AM / Roundup) it seems that the client died after
having seen the first PROGRESS line. The client in this case is
gpg-preset-passphrase which is an old hack and not a proper Assuan
client. It received the 'S PROGRESS' line but does not expect it and
returns an error.

We should re-implement that tool in terms of gpg-connect-agent and for
the test scripts use gpg-connect-agent directly. Justus is currently
reworking the test suite anyway.

neal added a project: Restricted Project.Feb 12 2016, 10:13 PM
neal added a subscriber: neal.

This should be fixed in acac103. (I was able to exactly reproduce your problem
and the patch fixed it for me.) If you are able to test and it works for you,
please report back here.

Thanks!

Yes, that patch fixed the problem for me.

neal claimed this task.
neal removed a project: Restricted Project.

Thanks! I'm mark this as resolved.